--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,14 +12,17 @@ services:
       MYSQL_ROOT_PASSWORD: 'FWDa67qpZFku7E2X'
       MYSQL_USER: 'message-board'
       MYSQL_PASSWORD: 'pfj95khzMwVWDPgv'
-      MYSQL_DATABASE: pk-inbox
+      MYSQL_DATABASE: 'message-board'
     volumes:
       - mysql:/var/lib/mysql
     ports:
       - 3306
 
   php:
-    image: php:7.1-fpm
+    image: php:7.1-fpm-pdo-mysql
+    build:
+      context: docker
+      dockerfile: PHPDockerfile
     restart: always
     volumes:
       - .:/var/www/html
