--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
   mysql:
     image: mysql:5.7
     restart: always
-    environment:
+    environment: &mysql_env
       MYSQL_ROOT_PASSWORD: 'FWDa67qpZFku7E2X'
       MYSQL_USER: 'message-board'
       MYSQL_PASSWORD: 'pfj95khzMwVWDPgv'
@@ -29,7 +29,7 @@ services:
     depends_on:
       - mysql
     environment:
-      SYMFONY_ENV: dev
+      <<: *mysql_env
 
   nginx:
     image: nginx:stable-alpine
