Added name to composer.json

--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,10 @@
         {
             "name": "William Arslett",
             "email": "william.a@biffbangpow.com"
-        }
+        },
+            {
+                "name": "Yannick Zuellig",
+                "email": "yzuellig@gmail.com"
+            }
     ]
 }
