--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "require": {
         "silex/silex": "^2.2",
         "twig/twig": "^2.4",
-        "doctrine/orm": "^2.5",
-        "mockery/mockery": "^0.9.9"
+        "doctrine/orm": "^2.5"
     },
     "autoload": {
         "psr-4": {
@@ -12,7 +11,8 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.3"
+        "phpunit/phpunit": "^6.3",
+         "mockery/mockery": "^0.9.9"
     },
     "license": "MIT",
     "authors": [
