--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before-script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
 
-script: phpunit
+script: phpunit --configuration phpunit.xml
 
 matrix:
   allow_failures:
