--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ php:
   - '7.1'
   - nightly
 
+install: composer install
+
 before-script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
