--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,17 @@ php:
 services:
   - docker
 
+env:
+  - DOCKER_COMPOSE_VERSION=1.4.2
+
+
+
 before install:
   - docker pull yzuellig/message-board
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
 
 install: composer install
 
@@ -17,7 +26,10 @@ before-script:
   - composer self-update
   - composer install --prefer-source --no-interaction --dev
 
-script: phpunit --configuration phpunit.xml
+script:
+  - phpunit --configuration phpunit.xml
+  - docker-compose up -d
+  - docker-compose exec php vendor/bin/doctrine orm:schema-tool:update --force
 
 matrix:
   fast_finish: true
